--- a/app/views/animals/index.html.erb
+++ b/app/views/animals/index.html.erb
@@ -29,5 +29,11 @@
 </div>
 
 <br>
-
+<!--takes user to the new.html.erb-->
 <%= link_to 'New Animal', new_animal_path %>
+<br>
+<!--takes user to the new.html.erb sighting page-->
+<%= link_to 'New Sighting', new_sighting_path %>
+<br>
+<!--takes user to the sightings listing page-->
+<%= link_to 'View All Sightings', sightings_path %>
