--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -21,5 +21,9 @@
   </ul>
 </p>
 
+<p>
+  <%= link_to 'New Sighting', new_sighting_path %>
+</p>
+
 <%= link_to 'Edit', edit_animal_path(@animal) %> |
 <%= link_to 'Back', animals_path %>
