--- a/app/views/sightings/_form.html.erb
+++ b/app/views/sightings/_form.html.erb
@@ -27,9 +27,14 @@
     <%= f.label :longitude %><br>
     <%= f.text_field :longitude %>
   </div>
+
+  <div class="field"> <%=select(:sightings, :region, options_for_select([["North","north"], ["South", "south"], ["East", "east"], ["West", "west"]]))%>
+  </div>
+
   <div class="field">
-    <%= f.label :animal_id %><br>
-    <%= f.text_field :animal_id %>
+    <%=select(:sighting, :animal_id, @animals_for_select, include_blank: true)%>
+    <!--<%= f.label :animal_id %><br>
+    <%= f.text_field :animal_id %> -->
   </div>
   <div class="actions">
     <%= f.submit %>
