--- a/app/views/animals/_sighting.html.erb
+++ b/app/views/animals/_sighting.html.erb
@@ -1,3 +1,5 @@
-<li>
-  <%= sighting.date.to_s %> <%= sighting.time.to_s %>
-</li>
+<li> Date: <%= sighting.date.to_s %></li>
+<li> Time: <%= sighting.time.to_s %> </li>
+<li> Latitude: <%= sighting.latitude.to_s %></li>
+<li> Longitude: <%= sighting.longitude.to_s %></li>
+<br>
