--- a/app/views/sightings/index.html.erb
+++ b/app/views/sightings/index.html.erb
@@ -9,6 +9,7 @@
       <th>Time</th>
       <th>Latitude</th>
       <th>Longitude</th>
+      <th>Region</th>
       <th>Animal</th>
       <th colspan="3"></th>
     </tr>
@@ -21,6 +22,7 @@
         <td><%= sighting.time %></td>
         <td><%= sighting.latitude %></td>
         <td><%= sighting.longitude %></td>
+        <td><%= sighting.region %></td>
         <!-- updated animal to show common_name rather than id -->
         <td><%= sighting.animal.common_name %></td>
         <td><%= link_to 'Show', sighting %></td>
@@ -30,7 +32,14 @@
     <% end %>
   </tbody>
 </table>
+<hr>
 
-<br>
-
+<form action="/sightings" method="get">
+  <label for="start_date">Start date</label>
+  <input id="start_date" name="start_date" type="text">
+  <label for="end_date">End date</label>
+  <input id="end_date" name="end_date" type="text">
+  <button>Run report</button>
+</form>
+<hr>
 <%= link_to 'New Sighting', new_sighting_path %>
