--- a/app/views/sightings/_form.html.erb
+++ b/app/views/sightings/_form.html.erb
@@ -28,7 +28,7 @@
     <%= f.text_field :longitude %>
   </div>
 
-  <div class="field"> <%=select(:sightings, :region, options_for_select([["North","north"], ["South", "south"], ["East", "east"], ["West", "west"]]))%>
+  <div class="field"> <%=select(:sighting, :region, options_for_select([["North","North"], ["South", "South"], ["East", "East"], ["West", "West"]]))%>
   </div>
 
   <div class="field">
