--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -15,7 +15,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li><a href="/animals/new">New Animal <span class="sr-only">(current)</span></a></li>
-        <li><a href="sightings/new">New Sighting</a></li>
+        <li><a href="/sightings/new">New Sighting</a></li>
         <li><a href="/sightings">View All Sightings</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
