--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -8,15 +8,15 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/animals">Wildlife Tracker</a>
+      <a class="navbar-brand" href="/sightings">Wildlife Tracker</a>
     </div>
 
     <!-- Collect the nav links, forms, and other content for toggling -->
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
+        <li><a href="/animals">View All Wildlife</a></li>
         <li><a href="/animals/new">New Animal <span class="sr-only">(current)</span></a></li>
         <li><a href="/sightings/new">New Sighting</a></li>
-        <li><a href="/sightings">View All Sightings</a></li>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
