--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <!-- Latest compiled and minified JavaScript -->
 
   <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Catamaran" rel="stylesheet">
-  
+
   <link href="https://fonts.googleapis.com/css?family=Candal" rel="stylesheet">
 
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -26,9 +26,9 @@
 <body>
 
     <%= render 'layouts/nav' %>
-  <div class="container-fluid header-image">
+  <div class="container-fluid">
   </div>
-  <div class="container">
+  <div class="container main-container">
 
     <%= yield %>
   </div>
