--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,15 +1,21 @@
 body {
-  background-color: #fff;
-  color: #333;
   font-family: 'Catamaran', sans-serif;
   font-size: 13px;
   line-height: 18px;
-  background-color: #e1eae5;
+  background: url('/assets/forest.jpeg');
+  background-size: cover;
+}
+
+.main-container {
+  background-image: linear-gradient(to bottom,#f8f8f8 0,#f2f2f2 100%);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
+
 }
 
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Candal', sans-serif;
   font-variant: small-caps;
+  color: #10222B;
 }
 
 th {
@@ -20,6 +26,7 @@ p, ol, ul, td {
   font-family: 'Catamaran', sans-serif;
   font-size: 13px;
   line-height: 18px;
+  color: #10222B;
 }
 
 pre {
