--- a/app/views/sightings/index.html.erb
+++ b/app/views/sightings/index.html.erb
@@ -1,7 +1,12 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Listing Sightings</h1>
+<h1>View All Wildlife Sightings</h1>
 <%= flash.now[:alert]%>
+
+<!--Added calendar -->
+<div id="calendar"></div>
+
+<h2>More Information </h2>
 
 <table class="table">
   <thead>
@@ -20,7 +25,7 @@
     <% @sightings.each do |sighting| %>
       <tr>
         <td><%= sighting.date %></td>
-        <td><%= sighting.time %></td>
+        <td><%= sighting.time.strftime("%H:%M") %></td>
         <td><%= sighting.latitude %></td>
         <td><%= sighting.longitude %></td>
         <td><%= sighting.region %></td>
@@ -35,6 +40,7 @@
 </table>
 <hr>
 
+<h2> Sort Sightings by Date </h2>
 <form action="/sightings" method="get">
   <label for="start_date">Start date</label>
   <input id="start_date" name="start_date" type="date" class="form-control">
@@ -46,4 +52,4 @@
   <button class="btn btn-default">Run report</button>
 </form>
 <hr>
-<%= link_to 'New Sighting', new_sighting_path %>
+<!-- < # %= link_to 'New Sighting', new_sighting_path %> -->
