final updates +ranger table

--- a/app/views/animals/show.html.erb
+++ b/app/views/animals/show.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<h1>View <%= @animal.common_name %> Details</h1>
 <p>
   <strong>Common name:</strong>
   <%= @animal.common_name %>
