--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -17,6 +17,8 @@
         <li><a href="/animals">View All Wildlife</a></li>
         <li><a href="/animals/new">New Animal <span class="sr-only">(current)</span></a></li>
         <li><a href="/sightings/new">New Sighting</a></li>
+        <li><a href="/rangers">Park Rangers</a></li>
+
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
