--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -1,7 +1,7 @@
 body {
   font-family: 'Catamaran', sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 16px;
+  line-height: 20px;
   background: url('/assets/forest.jpeg');
   background-size: cover;
 }
@@ -9,6 +9,7 @@ body {
 .main-container {
   background-image: linear-gradient(to bottom,#f8f8f8 0,#f2f2f2 100%);
   box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
+  padding: 20px 20px 50px 20px;
 
 }
 
@@ -24,8 +25,8 @@ th {
 
 p, ol, ul, td {
   font-family: 'Catamaran', sans-serif;
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 16px;
+  line-height: 20px;
   color: #10222B;
 }
 
