--- a/app/views/sightings/index.html.erb
+++ b/app/views/sightings/index.html.erb
@@ -17,6 +17,7 @@
       <th>Longitude</th>
       <th>Region</th>
       <th>Animal</th>
+      <th>Ranger</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -31,6 +32,8 @@
         <td><%= sighting.region %></td>
         <!-- updated animal to show common_name rather than id -->
         <td><%= sighting.animal.common_name %></td>
+        <!--added ranger -->
+        <td><%= sighting.ranger.nil? ? "" : sighting.ranger.name %></td>
         <td><%= link_to 'Show', sighting %></td>
         <td><%= link_to 'Edit', edit_sighting_path(sighting) %></td>
         <td><%= link_to 'Destroy', sighting, method: :delete, data: { confirm: 'Are you sure?' } %></td>
