--- a/app/views/sightings/show.html.erb
+++ b/app/views/sightings/show.html.erb
@@ -29,5 +29,11 @@
   <strong>Region:</strong>
   <%= @sighting.region %>
 </p>
+
+<p>
+  <strong>Ranger:</strong>
+  <%= @sighting.ranger.nil? ? "" : @sighting.ranger.name %>
+</p>
+
 <%= link_to 'Edit', edit_sighting_path(@sighting) %> |
 <%= link_to 'Back', sightings_path %>
