--- a/app/assets/stylesheets/scaffolds.scss
+++ b/app/assets/stylesheets/scaffolds.scss
@@ -2,15 +2,21 @@ body {
   font-family: 'Catamaran', sans-serif;
   font-size: 16px;
   line-height: 20px;
-  background: asset_path('forest.jpeg');
+  background: url('forest.jpeg');
   background-size: cover;
 }
 
 .main-container {
-  background-image: linear-gradient(to bottom,#f8f8f8 0,#f2f2f2 100%);
   box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
   padding: 20px 20px 50px 20px;
+  background-image: url('white_70.png');
+  
+}
 
+footer {
+  padding: 20px 20px 50px 20px;
+  background-image: linear-gradient(to bottom,#f8f8f8 0,#f2f2f2 100%);
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.15),0 1px 5px rgba(0,0,0,.075);
 }
 
 h1, h2, h3, h4, h5, h6 {
